tests/unit-fail/j038c.ref
Error: B3
Description: function call has more arguments than parameters in function definition.
Type: Undefined behavior.
See also: C11 sec. 6.5.2.2:6
  at foo(j038c.c:8)
  at main(j038c.c:8)
  at <file-scope>(<unknown>)
